style: fix page shifting on auth tab toggle, tree view 90% complete

--- a/src/components/Topic/Topic.css
+++ b/src/components/Topic/Topic.css
@@ -72,7 +72,7 @@
   opacity: 0;
   transition: opacity .25s;
   position: absolute;
-  top: -7px;
+  top: 5px;
   right: 0px;
   z-index: 5;
 }
