--- a/src/components/TopicsRow/TopicsRow.css
+++ b/src/components/TopicsRow/TopicsRow.css
@@ -29,7 +29,7 @@
 .add-topic__btn {
   font-size: 1.5rem;
   position: absolute;
-  left: 15px;
+  left: 7.5px;
   top: 7.5px;
   color: #404267;
   display: none;
@@ -46,7 +46,7 @@
 .AT-label {
   display: none;
   position: absolute;
-  top: .75rem;
+  top: 1rem;
   left: 3rem;
   font-size: .8rem;
 }
